syntax = "proto3";

option csharp_namespace = "Persistify.Grpc.Protos";

package types;

message TypeFieldProto {
  string path = 1;
}

message TypeDefinitionProto {
  string name = 1;
  repeated TypeFieldProto typeFields = 2;
}

message InitTypeRequest {
  TypeDefinitionProto typeDefinition = 1;
}

message InitTypeResponse {
}

message ListTypesRequest {}

message ListTypesResponse {
  repeated TypeDefinitionProto typeDefinitions = 1;
}

message DropTypeRequest {
  string name = 1;
}

message DropTypeResponse {
}

service TypesService {
  rpc InitType(InitTypeRequest) returns (InitTypeResponse) {}
  rpc ListTypes(ListTypesRequest) returns (ListTypesResponse) {}
  rpc DropType(DropTypeRequest) returns (DropTypeResponse) {}
}
